chage fake user process to initproc,add a simple swtch,fix the gap of el1 to el0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "types.h": "c",
-        "defs.h": "c"
+        "defs.h": "c",
+        "trap.h": "c",
+        "memlayout.h": "c"
     }
 }
