--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
     "files.associations": {
-        "types.h": "c",
-        "defs.h": "c",
-        "trap.h": "c",
-        "memlayout.h": "c"
+        "syscall.h": "c"
     }
 }
